--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/girlwhodrawsandstuff/day-planner#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "jest": "^27.0.4"
   }
 }
